--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-size: 120%;
+    font-size: 125%;
     background: #f8f8f8;
 }
 
@@ -65,7 +65,7 @@ form {
     padding: 10px;
     font-size: 15px;
     color: white;
-    background: #5f9ea0;
+    background: none;
     border: none;
     border-radius: 5px;
 }
